<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tcc.appmarlycordeiro.activity.CadastrarPacientesActivity">

    <EditText
        android:id="@+id/cadpaci_txt_nome_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/form_nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cadpaci_txt_email_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/form_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadpaci_txt_nome_id" />

    <EditText
        android:id="@+id/cadpaci_txt_telefone_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/form_telefone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadpaci_txt_email_id" />

    <EditText
        android:id="@+id/cadpaci_txt_end_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/form_endereco"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadpaci_txt_telefone_id" />

    <Button
        android:id="@+id/cadpaci_btn_cadastrar_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/bt_form_cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cadpaci_txt_obs_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/form_observacao"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadpaci_rdig_sexo_id" />

    <Spinner
        android:id="@+id/cadpaci_sp_estado_id"
        android:layout_width="173dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadpaci_txt_end_id" />

    <EditText
        android:id="@+id/cadpaci_txt_cidade_id"
        android:layout_width="173dp"
        android:layout_height="42dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/form_cidade"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadpaci_txt_end_id" />

    <RadioGroup
        android:id="@+id/cadpaci_rdig_sexo_id"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadpaci_sp_estado_id">

        <RadioButton
            android:id="@+id/cadpaci_rd_sexo_m_id"
            android:layout_width="117dp"
            android:layout_height="34dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/form_masculino"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/cadpaci_rd_sexo_f_id"
            android:layout_width="117dp"
            android:layout_height="34dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:text="@string/form_feminino" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
