<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/linha_evento_txt_evento_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp"
        android:text="@string/linha_cli_txt_telefone"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/linha_evento_txt_locall_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linha_evento_txt_evento_id"
        android:layout_centerHorizontal="true"
        android:paddingBottom="5dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/linha_cli_txt_nome" />

    <TextView
        android:id="@+id/linha_evento_txt_data_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linha_evento_txt_locall_id"
        android:layout_centerHorizontal="true"
        android:paddingBottom="5dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/linha_cli_txt_nome" />

    <ImageButton
        android:id="@+id/linha_evento_delete_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@color/FundoApp"
        android:contentDescription="@string/icon2"
        android:elevation="0dp"
        android:src="@android:drawable/ic_delete"
        android:visibility="visible" />

</android.widget.RelativeLayout>